--- a/basketapp/templates/basketapp/basket.html
+++ b/basketapp/templates/basketapp/basket.html
@@ -4,9 +4,10 @@
 
 {% block container %}
     <section class="padding-site">
-        <header class="header">
+        <header class="header header-overlap">
             {% include 'mainapp/includes/inc_header.html' %}
         </header>
+        <div class="product-page-empty"></div>
         <div class="basket">
             <div class="basket-body">
                 <div class="basket-header">
