--- a/adminapp/templates/adminapp/contact_update.html
+++ b/adminapp/templates/adminapp/contact_update.html
@@ -16,6 +16,6 @@
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="form-control" type="submit" value="сохранить">
+        <input class="btn btn-success form-control" type="submit" value="сохранить">
     </form>
 {% endblock %}
