--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -16,4 +16,8 @@
         admin-menu-list{% if request.resolver_match.url_name in 'contacts, contact_create, contact_update, contact_delete' %}-active{% endif %}">
         <a class="admin-menu-link" href="{% url 'admin_custom:contacts' %}">контакты</a>
     </li>
+    <li class="admin-menu-list
+        admin-menu-list{% if request.resolver_match.url_name in 'orders, order_read, order_create, order_update, order_delete' %}-active{% endif %}">
+        <a class="admin-menu-link" href="{% url 'admin_custom:orders' %}">заказы</a>
+    </li>
 </ul>
