--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -13,7 +13,7 @@
             {% endif %}
             {{ login_form.as_p }}
             <br>
-            <input class="form-control" type="submit" value="LOGIN">
+            <input class="btn btn-success form-control" type="submit" value="LOGIN">
         </form>
         <div class="social-login-buttons">
             {% for social in socials %}
