--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -10,17 +10,16 @@
     </title>
     {% block css %}
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700" rel="stylesheet">
+{#        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">#}
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
               integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
               crossorigin="anonymous">
-{#        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"#}
-{#              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"#}
-{#              crossorigin="anonymous">#}
     {% endblock %}
     {% block js %}
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
         <script src="{% static 'js/basket_scripts.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% endblock %}
 </head>
 
