--- a/mainapp/templates/mainapp/showroom.html
+++ b/mainapp/templates/mainapp/showroom.html
@@ -2,10 +2,11 @@
 {% load static %}
 
 {% block container %}
-<header class="header padding-site">
+<header class="header header-overlap padding-site">
     {% include 'mainapp/includes/inc_header.html' %}
 </header>
 <main class="main">
+    <div class="product-page-empty"></div>
     {% include 'mainapp/includes/inc_products_nav.html' %}
     <section class="product-page padding-site">
         <article class="product-slider">
