Выполнил задания Django-2 Урок 4. Работа с заказом пользователя обновляем остатки товара, добавляем код jQuery

--- a/adminapp/templates/adminapp/base.html
+++ b/adminapp/templates/adminapp/base.html
@@ -17,6 +17,9 @@
               crossorigin="anonymous">
     {% endblock %}
     {% block js %}
+        <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
+        <script src="{% static 'js/jquery.formset.js' %}"></script>
+        <script src="{% static 'js/orders_scripts.js' %}"></script>
     {% endblock %}
 </head>
 
