--- a/basketapp/templates/basketapp/includes/inc_basket_list.html
+++ b/basketapp/templates/basketapp/includes/inc_basket_list.html
@@ -56,7 +56,10 @@
             <h4 class="basket-totals-text"><b>Total:&nbsp;</b>${{ basket_items.0.get_products_total_price_by_user }}</h4>
         </div>
         <a class="basket-checkout-link" href="#">
-            <div class="basket-checkout-button">Checkout</div>
+{#            <div class="basket-checkout-button">#}
+                <a href="{% url 'order:order_create' %}" class="basket-checkout-button">Checkout</a>
+
+            </div>
         </a>
     </div>
 {% endif %}
