--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -20,6 +20,7 @@
     {% endblock %}
     {% block js %}
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
+        <script src="{% static 'js/jquery.formset.js' %}"></script>
         <script src="{% static 'js/basket_scripts.js' %}"></script>
         <script src="{% static 'js/orders_scripts.js' %}"></script>
     {% endblock %}
