--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1477,6 +1477,7 @@ body {
     box-shadow: 0 2px 5px 1px rgba(33, 33, 33, 0.35);
     color: #fff;
     margin: 0 20px 0 40px;
+    text-decoration: none;
 }
 
 .basket-checkout-button:active {
